# Ai-factory

./: README.md  install.ps1
software-factory/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.app  Dockerfile.sandbox  GITHUB_READY.md  LICENSE  README.md  ai-factory.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  result.json  setup.ps1
software-factory/.github/workflows/: ci.yml
software-factory/agents/: __init__.py  architect_agent.py  auditor_agent.py  developer_agent.py  supervisor_agent.py
software-factory/config/: settings.py
software-factory/memory/: chromadb_store.py  semantic_cache.py  skill_manager.py  vector_store.py
software-factory/observability/: logger.py  metrics.py
software-factory/orchestrator/: workflow_graph.py
software-factory/router/: model_router.py
software-factory/sandbox/: docker_executor.py
software-factory/skills/: README.md  example_skill.md
software-factory/src/ai_software_factory/: ai_factory.py  main.py
software-factory/src/ai_software_factory/agents/: __init__.py  architect_agent.py  auditor_agent.py  developer_agent.py  supervisor_agent.py
software-factory/src/ai_software_factory/config/: settings.py
software-factory/src/ai_software_factory/memory/: chromadb_store.py  semantic_cache.py  skill_manager.py  vector_store.py
software-factory/src/ai_software_factory/observability/: logger.py  metrics.py
software-factory/src/ai_software_factory/orchestrator/: workflow_graph.py
software-factory/src/ai_software_factory/router/: local_llm.py  model_router.py
software-factory/src/ai_software_factory/sandbox/: docker_executor.py
software-factory/src/ai_software_factory/tools/: file_manager.py  filesystem_tools.py  log_summarizer.py  shell_runner.py
software-factory/tools/: file_manager.py  filesystem_tools.py  log_summarizer.py  shell_runner.py
