[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-software-factory"
version = "1.0.3"
description = "Autonomous AI Software Factory - Production-grade multi-agent system"
readme = "README.md"
requires-python = ">=3.11"


dependencies = [
    "langgraph>=0.2.45",
    "langchain-core>=0.3.9",
    "openai>=1.54.3",
    "qdrant-client>=1.12.1",
    "docker>=7.1.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "opentelemetry-api>=1.28.1",
    "opentelemetry-sdk>=1.28.1",
    "opentelemetry-instrumentation-requests>=0.49b1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.7.2",
    "mypy>=1.13.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.1.0",
    "tiktoken>=0.8.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=. --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
ai-factory = "ai_software_factory.ai_factory:cli_main"

[tool.setuptools.packages.find]
where = ["src"]
